--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>💬 Are you a robot? 🤖</title>
+    <title>THERAPYBOT</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="title">
-      <h1>💬 ARE YOU A ROBOT? 🤖</h1>
+      <h1>THERAPYBOT</h1>
     </div>
     <div class="wrapper">
       <div id="chat" class="chat">
